# synthetic-signwriting

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
synthetic_signwriting/: generator.py  synthetic_pose_helper.py  synthetic_signwriting.py
synthetic_signwriting/data/: base_pose.pose  hands.npy
synthetic_signwriting/faces/: faces.py
synthetic_signwriting/hands/: README.md  hands.py  visualize_hands.py
