[project]
name = "synthetic-signwriting"
description = "A utility to generate synthetic SignWriting poses, for pretraining machine learning models."
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
]
readme = "README.md"
dependencies = [
    "pose-format",
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
good-names = ["i", "f", "x", "y", "z"]

[tool.setuptools]
packages = [
    "synthetic_signwriting",
    "synthetic_signwriting.hands"
]

[tool.setuptools.package-data]
synthetic_signwriting = ["**/hands.npy"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["synthetic_signwriting"]
